feat:全面支持注解继承/复合注解