@@ -509,6 +509,7 @@
                         --add-opens=java.base/java.nio=ALL-UNNAMED
                         --add-opens java.base/java.util=ALL-UNNAMED
                         --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens java.base/sun.reflect.annotation=ALL-UNNAMED
                         --add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED
                         --add-opens=java.rmi/java.rmi=ALL-UNNAMED
                         --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
